# AetherSentrix

./: .dump_cache.json  .env.example  .gitignore  ADAPTIVE_TRUST_DECEPTION_PLAN.md  CODEBASE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_READINESS_PLAN.md  README.md  api.py  api_v2.py  dump_codebase.py  load_test_api.py  main.py  pyproject.toml  pytest.ini  quick_start.py  refactor.py  requirements.txt  setup.py  test_all_features.py  test_expanded_simulator.py  update_readme.py
.github/workflows/: tests.yml
core/: api.py  api_models.py  api_v2.py  detection_engine.py
data/: alerts.jsonl  events.jsonl
data/datasets/: README.md
data/model_registry/: feature_columns.pkl  iso_forest_v1.pkl  registry.json  xgboost_classifier_v1.pkl  xgboost_rf_ensemble_v1.pkl
demo/: __init__.py  demo_runner.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  LandingPage.jsx  constants.js  landing.css  portal.css  styles.css  utils.js
pipeline/: __init__.py  analytics.py  anomaly_detector.py  attack_graph.py  confidence_fusion.py  config.py  config_prod.py  detection_engine.py  explainability.py  feature_schema.py  logging_enhanced.py  model_factory.py  temporal_stability.py  threat_classifier.py
pipeline/feedback/: __init__.py  (+1 more)
plans/: round_1_implementation_plan.md
scripts/: check_production_readiness.py  evaluate_models.py  load_test_api.py  quick_start.py  train_cic_ids.py
tests/: conftest.py  test_all_features.py  test_api.py  test_ensemble.py  test_models.py  test_neuromorphic_models.py  test_temporal_stability.py
(+102 files in other folders)
