[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethersentrix-soc-engine"
version = "0.1.0"
description = "AI-driven threat detection and simulation engine for hackathon demo"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "AetherSentrix Team"}
]
keywords = ["cybersecurity", "ai", "threat detection", "simulation", "soc"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "python-dateutil>=2.8.2",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.2.0",
  "xgboost>=1.7.0"
]

[project.scripts]
aethersentrix-demo = "main:run_demo"
